fix du datatables -opérationnel- et fix du menu dropdown -opérationnel

--- a/resources/assets/sass/partials/_buttons.scss
+++ b/resources/assets/sass/partials/_buttons.scss
@@ -14,3 +14,8 @@
 .green-button.square {
   border-radius: 0;
 }
+
+.dropdown-custom-style {
+  border-radius: 70px!important;
+  border: 1px solid $primary-color!important;
+}
