--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,7 +11,9 @@
 @import "partials/_buttons";
 @import "partials/_form";
 @import "partials/_dataTables";
+@import "partials/_alerts";
 
 // bootstrap 4
 @import "node_modules/bootstrap/scss/bootstrap.scss";
+
 
