responsive de la page d'accueil, js sur la sidebar admin (en cours)

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,7 @@
 @import "partials/_form";
 @import "partials/_dataTables";
 @import "partials/_alerts";
+@import "partials/_responsive";
 
 // bootstrap 4
 @import "node_modules/bootstrap/scss/bootstrap.scss";
