page histoire amma fonctionnelle, ajout blog, uploaders, fond d'écrans

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 // partials
 @import "partials/_variables";
 @import "partials/_layout";
+@import "partials/_blog";
 @import "partials/_titles";
 @import "partials/_links";
 @import "partials/_images";
