--- a/resources/assets/sass/partials/_responsive.scss
+++ b/resources/assets/sass/partials/_responsive.scss
@@ -164,6 +164,11 @@
 
   // histoire amma
 
+  .history-container {
+    width: 60%;
+    margin: auto;
+  }
+  
   .history-video {
     text-align: center;
     iframe {
